@@ -1,92 +1,94 @@
-# docker.md
+# db.md
 
-# Docker 운영 가이드 — AutoForge
+# Database Schema — AutoForge (PostgreSQL 16)
 
-## Dockerfile (Multi-Stage, Java 21, Non-Root)
+## DDL
 
-```dockerfile
-FROM eclipse-temurin:21-jdk-alpine AS builder
-WORKDIR /app
-COPY . .
-RUN ./gradlew clean bootJar --no-daemon
+```sql
+CREATE EXTENSION IF NOT EXISTS "pgcrypto";
 
-FROM eclipse-temurin:21-jre-alpine
-WORKDIR /app
-RUN addgroup -S spring && adduser -S spring -G spring
-USER spring:spring
-COPY --from=builder /app/build/libs/autoforge-backend-*.jar app.jar
-EXPOSE 8080
-ENTRYPOINT ["java", "-XX:+UseZGC", "-XX:+ZGenerational", "-jar", "app.jar"]
+CREATE TABLE users (
+    user_id        UUID         PRIMARY KEY DEFAULT gen_random_uuid(),
+    oauth_provider VARCHAR(20)  NOT NULL,
+    oauth_id       VARCHAR(255) NOT NULL UNIQUE,
+    email          VARCHAR(255),
+    nickname       VARCHAR(50),
+    role           VARCHAR(20)  DEFAULT 'USER',
+    created_at     TIMESTAMPTZ  DEFAULT CURRENT_TIMESTAMP,
+    updated_at     TIMESTAMPTZ  DEFAULT CURRENT_TIMESTAMP
+);
+CREATE INDEX idx_users_oauth ON users(oauth_provider, oauth_id);
+
+CREATE TABLE ai_tasks (
+    task_id            UUID         PRIMARY KEY DEFAULT gen_random_uuid(),
+    user_id            UUID         NOT NULL REFERENCES users(user_id) ON DELETE CASCADE,
+    requirements       TEXT         NOT NULL,
+    status             VARCHAR(30)  NOT NULL,
+    total_score        DECIMAL(5,2),
+    final_artifact_url VARCHAR(512),
+    created_at         TIMESTAMPTZ  DEFAULT CURRENT_TIMESTAMP,
+    updated_at         TIMESTAMPTZ  DEFAULT CURRENT_TIMESTAMP
+);
+CREATE INDEX idx_ai_tasks_user_id ON ai_tasks(user_id);
+CREATE INDEX idx_ai_tasks_status  ON ai_tasks(status);
+
+CREATE TABLE task_workflow_steps (
+    step_id           UUID        PRIMARY KEY DEFAULT gen_random_uuid(),
+    task_id           UUID        NOT NULL REFERENCES ai_tasks(task_id) ON DELETE CASCADE,
+    step_sequence     INT         NOT NULL,
+    agent_type        VARCHAR(50) NOT NULL,
+    prompt_input      TEXT        NOT NULL,
+    response_output   TEXT,
+    status            VARCHAR(20) NOT NULL,
+    execution_time_ms BIGINT,
+    created_at        TIMESTAMPTZ DEFAULT CURRENT_TIMESTAMP
+);
+CREATE INDEX idx_workflow_steps_task ON task_workflow_steps(task_id, step_sequence);
+
+CREATE TABLE code_snapshots (
+    snapshot_id       UUID    PRIMARY KEY DEFAULT gen_random_uuid(),
+    task_id           UUID    NOT NULL REFERENCES ai_tasks(task_id) ON DELETE CASCADE,
+    iteration_count   INT     NOT NULL,
+    source_code       TEXT    NOT NULL,
+    evaluation_scores JSONB,
+    feedback_notes    JSONB,
+    is_best_version   BOOLEAN DEFAULT FALSE,
+    created_at        TIMESTAMPTZ DEFAULT CURRENT_TIMESTAMP
+);
+CREATE INDEX idx_code_snapshots_task_iter ON code_snapshots(task_id, iteration_count);
 ```
 
-## Nginx — `nginx/default.conf`
-
-```nginx
-server {
-    listen 80;
-    server_name api.autoforge.com;
-
-    location /api/ {
-        proxy_pass         http://autoforge-api:8080;
-        proxy_set_header   Host              $host;
-        proxy_set_header   X-Real-IP         $remote_addr;
-        proxy_set_header   X-Forwarded-For   $proxy_add_x_forwarded_for;
-
-        proxy_buffering           off;
-        proxy_cache               off;
-        proxy_set_header          Connection '';
-        proxy_http_version        1.1;
-        chunked_transfer_encoding off;
-        proxy_read_timeout        1800s;
-    }
-}
-```
-
-> SSL 적용 시 `listen 443 ssl http2;` 로 변경하고 인증서 경로를 추가합니다.
-
-## 환경 변수 파일 (`.env`)
-
-프로젝트 루트에 `.env` 파일을 생성하고 아래 값을 채웁니다. `.env`는 절대 Git에 커밋하지 않습니다.
-
-```env
-JWT_SECRET=your-very-long-random-secret-key
-LLM_OPENAI_API_KEY=sk-...
-LLM_ANTHROPIC_API_KEY=sk-ant-...
-S3_BUCKET_NAME=autoforge-artifacts
-S3_REGION=ap-northeast-2
-AWS_ACCESS_KEY_ID=...
-AWS_SECRET_ACCESS_KEY=...
-```
-
-## 명령어
-
-```bash
-# 전체 스택 빌드 및 실행
-docker compose up --build -d
-
-# API 서버 로그 실시간 확인
-docker compose logs -f api
-
-# 스택 중지
-docker compose down
-
-# 볼륨까지 초기화 (DB 데이터 삭제)
-docker compose down -v
-
-# 특정 서비스만 재시작
-docker compose restart api
-
-# 컨테이너 내부 접속
-docker compose exec postgres psql -U autoforge_user -d autoforge
-docker compose exec redis redis-cli
-```
-
-## 헬스체크 흐름
+## Table Relationships
 
 ```
-Docker Compose 시작
-  → postgres: pg_isready 통과 (service_healthy)
-  → redis:    redis-cli ping 통과 (service_healthy)
-  → api:      depends_on 조건 만족 후 기동
-  → nginx:    api 기동 후 라우팅 시작
+users (1) ──< ai_tasks (1) ──< task_workflow_steps
+                         (1) ──< code_snapshots
 ```
+
+## Column Notes
+
+### users
+| Column | Description |
+|---|---|
+| `oauth_provider` | `GOOGLE` \| `APPLE` |
+| `oauth_id` | OAuth 제공자가 발급하는 고유 식별자 |
+| `role` | `USER` \| `ADMIN` |
+
+### ai_tasks
+| Column | Description |
+|---|---|
+| `status` | `PENDING` → `PROCESSING` → `COMPLETED` \| `FAILED` |
+| `final_artifact_url` | S3 Pre-signed URL (Zip 파일) |
+
+### task_workflow_steps
+| Column | Description |
+|---|---|
+| `agent_type` | `ORCHESTRATOR` \| `ANALYZER` \| `DRAFTER` \| `SECURITY` \| `STABILITY` \| `PERFORMANCE` |
+| `status` | `SUCCESS` \| `FAILED` \| `TIMEOUT` |
+
+### code_snapshots
+| Column | Description |
+|---|---|
+| `evaluation_scores` | `{"security": 85, "stability": 90, "performance": 75}` |
+| `feedback_notes` | `{"security": "SQL Injection 가능성 있음", ...}` |
+| `is_best_version` | 현재까지 가장 높은 점수의 스냅샷 여부 |
